libqt6c/src/libqaccessible.hpp

typedef struct QAccessibleEditableTextInterface QAccessibleEditableTextInterface;
typedef struct QAccessibleInterface QAccessibleInterface;
typedef struct QAccessibleTableCellInterface QAccessibleTableCellInterface;
typedef struct QAccessibleValueInterface QAccessibleValueInterface;
typedef struct QVariant QVariant;
void QAccessibleEditableTextInterface_DeleteText(QAccessibleEditableTextInterface* self, int startOffset, int endOffset);
void QAccessibleEditableTextInterface_InsertText(QAccessibleEditableTextInterface* self, int offset, const libqt_string text);
void QAccessibleEditableTextInterface_ReplaceText(QAccessibleEditableTextInterface* self, int startOffset, int endOffset, const libqt_string text);
void QAccessibleEditableTextInterface_OperatorAssign(QAccessibleEditableTextInterface* self, const QAccessibleEditableTextInterface* param1);
void QAccessibleEditableTextInterface_Delete(QAccessibleEditableTextInterface* self);
QVariant* QAccessibleValueInterface_CurrentValue(const QAccessibleValueInterface* self);
void QAccessibleValueInterface_SetCurrentValue(QAccessibleValueInterface* self, const QVariant* value);
QVariant* QAccessibleValueInterface_MaximumValue(const QAccessibleValueInterface* self);
QVariant* QAccessibleValueInterface_MinimumValue(const QAccessibleValueInterface* self);
QVariant* QAccessibleValueInterface_MinimumStepSize(const QAccessibleValueInterface* self);
void QAccessibleValueInterface_OperatorAssign(QAccessibleValueInterface* self, const QAccessibleValueInterface* param1);
void QAccessibleValueInterface_Delete(QAccessibleValueInterface* self);
bool QAccessibleTableCellInterface_IsSelected(const QAccessibleTableCellInterface* self);
libqt_list /* of QAccessibleInterface* */ QAccessibleTableCellInterface_ColumnHeaderCells(const QAccessibleTableCellInterface* self);
libqt_list /* of QAccessibleInterface* */ QAccessibleTableCellInterface_RowHeaderCells(const QAccessibleTableCellInterface* self);
int QAccessibleTableCellInterface_ColumnIndex(const QAccessibleTableCellInterface* self);
int QAccessibleTableCellInterface_RowIndex(const QAccessibleTableCellInterface* self);
int QAccessibleTableCellInterface_ColumnExtent(const QAccessibleTableCellInterface* self);
int QAccessibleTableCellInterface_RowExtent(const QAccessibleTableCellInterface* self);
QAccessibleInterface* QAccessibleTableCellInterface_Table(const QAccessibleTableCellInterface* self);