QtBeef/src/Qt/qaccessible.bf

class QAccessibleEditableTextInterface : IQAccessibleEditableTextInterface
{
	private QAccessibleEditableTextInterface_Ptr ptr;
	public void* ObjectPtr => ptr.Ptr;
	static void QtBf_ConnectSignals(Self obj)
	{
		CQt.ObjectHandleMap[obj.ObjectPtr] = obj;
		CQt.QAccessibleEditableTextInterface_OnDeleteText(obj.ObjectPtr,  => QtBeef_QAccessibleEditableTextInterface_OnDeleteText);
		CQt.QAccessibleEditableTextInterface_OnInsertText(obj.ObjectPtr,  => QtBeef_QAccessibleEditableTextInterface_OnInsertText);
		CQt.QAccessibleEditableTextInterface_OnReplaceText(obj.ObjectPtr,  => QtBeef_QAccessibleEditableTextInterface_OnReplaceText);
	}
	static void QtBeef_QAccessibleEditableTextInterface_OnDeleteText(void* ptr, c_int startOffset, c_int endOffset)
	{
		let obj = CQt.ObjectHandleMap[ptr] as Self;
		obj.OnDeleteText(startOffset, endOffset);
	}
	static void QtBeef_QAccessibleEditableTextInterface_OnInsertText(void* ptr, c_int offset, libqt_string text)
	{
		let obj = CQt.ObjectHandleMap[ptr] as Self;
		obj.OnInsertText(offset, text);
	}
	static void QtBeef_QAccessibleEditableTextInterface_OnReplaceText(void* ptr, c_int startOffset, c_int endOffset, libqt_string text)
	{
		let obj = CQt.ObjectHandleMap[ptr] as Self;
		obj.OnReplaceText(startOffset, endOffset, text);
	}
	public this(QAccessibleEditableTextInterface_Ptr ptr)
	{
		this.ptr = ptr;
		QtBf_ConnectSignals(this);
	}
	public ~this()
	{
		CQt.QAccessibleEditableTextInterface_Delete(this.ptr);
	}
	public  virtual void OnDeleteText(c_int startOffset, c_int endOffset)
	{
	}
	public  virtual void OnInsertText(c_int offset, libqt_string text)
	{
	}
	public  virtual void OnReplaceText(c_int startOffset, c_int endOffset, libqt_string text)
	{
	}
}
interface IQAccessibleEditableTextInterface : IQtObjectInterface
{
}
extension CQt
{
	[LinkName("QAccessibleEditableTextInterface_Delete")]
	public static extern void QAccessibleEditableTextInterface_Delete(QAccessibleEditableTextInterface_Ptr self);
	[LinkName("QAccessibleEditableTextInterface_DeleteText")]
	public static extern void QAccessibleEditableTextInterface_DeleteText(void* self, c_int startOffset, c_int endOffset);
	
	public function void QAccessibleEditableTextInterface_OnDeleteText_action(void* self, c_int startOffset, c_int endOffset);
	[LinkName("QAccessibleEditableTextInterface_OnDeleteText")]
	public static extern void QAccessibleEditableTextInterface_OnDeleteText(void* self, QAccessibleEditableTextInterface_OnDeleteText_action _action);
	
	[LinkName("QAccessibleEditableTextInterface_SuperDeleteText")]
	public static extern void QAccessibleEditableTextInterface_SuperDeleteText(void* self, c_int startOffset, c_int endOffset);
	[LinkName("QAccessibleEditableTextInterface_InsertText")]
	public static extern void QAccessibleEditableTextInterface_InsertText(void* self, c_int offset, libqt_string text);
	
	public function void QAccessibleEditableTextInterface_OnInsertText_action(void* self, c_int offset, libqt_string text);
	[LinkName("QAccessibleEditableTextInterface_OnInsertText")]
	public static extern void QAccessibleEditableTextInterface_OnInsertText(void* self, QAccessibleEditableTextInterface_OnInsertText_action _action);
	
	[LinkName("QAccessibleEditableTextInterface_SuperInsertText")]
	public static extern void QAccessibleEditableTextInterface_SuperInsertText(void* self, c_int offset, libqt_string text);
	[LinkName("QAccessibleEditableTextInterface_ReplaceText")]
	public static extern void QAccessibleEditableTextInterface_ReplaceText(void* self, c_int startOffset, c_int endOffset, libqt_string text);
	
	public function void QAccessibleEditableTextInterface_OnReplaceText_action(void* self, c_int startOffset, c_int endOffset, libqt_string text);
	[LinkName("QAccessibleEditableTextInterface_OnReplaceText")]
	public static extern void QAccessibleEditableTextInterface_OnReplaceText(void* self, QAccessibleEditableTextInterface_OnReplaceText_action _action);
	
	[LinkName("QAccessibleEditableTextInterface_SuperReplaceText")]
	public static extern void QAccessibleEditableTextInterface_SuperReplaceText(void* self, c_int startOffset, c_int endOffset, libqt_string text);
	[LinkName("QAccessibleEditableTextInterface_OperatorAssign")]
	public static extern void QAccessibleEditableTextInterface_OperatorAssign(void* self, void** param1);
}
// --------------------------------------------------------------
// QAccessibleValueInterface
// --------------------------------------------------------------
[CRepr]
struct QAccessibleValueInterface_Ptr
{
	public void* Ptr;
	public this(void* ptr)
	{
		this.Ptr = ptr;
	}
	public QVariant_Ptr CurrentValue()
	{
		return QVariant_Ptr(CQt.QAccessibleValueInterface_CurrentValue((.)this.Ptr));
	}
	public void SetCurrentValue(IQVariant value)
	{
		CQt.QAccessibleValueInterface_SetCurrentValue((.)this.Ptr, (.)value?.ObjectPtr);
	}
	public QVariant_Ptr MaximumValue()
	{
		return QVariant_Ptr(CQt.QAccessibleValueInterface_MaximumValue((.)this.Ptr));
	}
	public QVariant_Ptr MinimumValue()
	{
		return QVariant_Ptr(CQt.QAccessibleValueInterface_MinimumValue((.)this.Ptr));
	}
	public QVariant_Ptr MinimumStepSize()
	{
		return QVariant_Ptr(CQt.QAccessibleValueInterface_MinimumStepSize((.)this.Ptr));
	}
}
class QAccessibleValueInterface : IQAccessibleValueInterface
{
	private QAccessibleValueInterface_Ptr ptr;
	public void* ObjectPtr => ptr.Ptr;
	static void QtBf_ConnectSignals(Self obj)
	{
		CQt.ObjectHandleMap[obj.ObjectPtr] = obj;
		CQt.QAccessibleValueInterface_OnCurrentValue(obj.ObjectPtr,  => QtBeef_QAccessibleValueInterface_OnCurrentValue);
		CQt.QAccessibleValueInterface_OnSetCurrentValue(obj.ObjectPtr,  => QtBeef_QAccessibleValueInterface_OnSetCurrentValue);
		CQt.QAccessibleValueInterface_OnMaximumValue(obj.ObjectPtr,  => QtBeef_QAccessibleValueInterface_OnMaximumValue);
		CQt.QAccessibleValueInterface_OnMinimumValue(obj.ObjectPtr,  => QtBeef_QAccessibleValueInterface_OnMinimumValue);
		CQt.QAccessibleValueInterface_OnMinimumStepSize(obj.ObjectPtr,  => QtBeef_QAccessibleValueInterface_OnMinimumStepSize);
	}
	static void QtBeef_QAccessibleValueInterface_OnCurrentValue(void* ptr)
	{
		let obj = CQt.ObjectHandleMap[ptr] as Self;
		obj.OnCurrentValue();
	}
	static void QtBeef_QAccessibleValueInterface_OnSetCurrentValue(void* ptr, void** value)
	{
		let obj = CQt.ObjectHandleMap[ptr] as Self;
		obj.OnSetCurrentValue(value);
	}
	static void QtBeef_QAccessibleValueInterface_OnMaximumValue(void* ptr)
	{
		let obj = CQt.ObjectHandleMap[ptr] as Self;
		obj.OnMaximumValue();
	}
	static void QtBeef_QAccessibleValueInterface_OnMinimumValue(void* ptr)
	{
		let obj = CQt.ObjectHandleMap[ptr] as Self;
		obj.OnMinimumValue();
	}
	static void QtBeef_QAccessibleValueInterface_OnMinimumStepSize(void* ptr)
	{
		let obj = CQt.ObjectHandleMap[ptr] as Self;
		obj.OnMinimumStepSize();
	}
	public this(QAccessibleValueInterface_Ptr ptr)
	{
		this.ptr = ptr;
		QtBf_ConnectSignals(this);
	}
	public ~this()
	{
		CQt.QAccessibleValueInterface_Delete(this.ptr);
	}
	public  virtual QVariant_Ptr OnCurrentValue()
	{
		return default;
	}
	public  virtual void OnSetCurrentValue(void** value)
	{
	}
	public  virtual QVariant_Ptr OnMaximumValue()
	{
		return default;
	}
	public  virtual QVariant_Ptr OnMinimumValue()
	{
		return default;
	}
	public  virtual QVariant_Ptr OnMinimumStepSize()
	{
		return default;
	}
}
interface IQAccessibleValueInterface : IQtObjectInterface
{
}
extension CQt
{
	[LinkName("QAccessibleValueInterface_Delete")]
	public static extern void QAccessibleValueInterface_Delete(QAccessibleValueInterface_Ptr self);
	[LinkName("QAccessibleValueInterface_CurrentValue")]
	public static extern void* QAccessibleValueInterface_CurrentValue(void* self);
	
	public function void QAccessibleValueInterface_OnCurrentValue_action(void* self);
	[LinkName("QAccessibleValueInterface_OnCurrentValue")]
	public static extern void* QAccessibleValueInterface_OnCurrentValue(void* self, QAccessibleValueInterface_OnCurrentValue_action _action);
	
	[LinkName("QAccessibleValueInterface_SuperCurrentValue")]
	public static extern void* QAccessibleValueInterface_SuperCurrentValue(void* self);
	[LinkName("QAccessibleValueInterface_SetCurrentValue")]
	public static extern void QAccessibleValueInterface_SetCurrentValue(void* self, void** value);
	
	public function void QAccessibleValueInterface_OnSetCurrentValue_action(void* self, void** value);
	[LinkName("QAccessibleValueInterface_OnSetCurrentValue")]
	public static extern void QAccessibleValueInterface_OnSetCurrentValue(void* self, QAccessibleValueInterface_OnSetCurrentValue_action _action);
	
	[LinkName("QAccessibleValueInterface_SuperSetCurrentValue")]
	public static extern void QAccessibleValueInterface_SuperSetCurrentValue(void* self, void** value);
	[LinkName("QAccessibleValueInterface_MaximumValue")]
	public static extern void* QAccessibleValueInterface_MaximumValue(void* self);
	
	public function void QAccessibleValueInterface_OnMaximumValue_action(void* self);
	[LinkName("QAccessibleValueInterface_OnMaximumValue")]
	public static extern void* QAccessibleValueInterface_OnMaximumValue(void* self, QAccessibleValueInterface_OnMaximumValue_action _action);
	
	[LinkName("QAccessibleValueInterface_SuperMaximumValue")]
	public static extern void* QAccessibleValueInterface_SuperMaximumValue(void* self);
	[LinkName("QAccessibleValueInterface_MinimumValue")]
	public static extern void* QAccessibleValueInterface_MinimumValue(void* self);
	
	public function void QAccessibleValueInterface_OnMinimumValue_action(void* self);
	[LinkName("QAccessibleValueInterface_OnMinimumValue")]
	public static extern void* QAccessibleValueInterface_OnMinimumValue(void* self, QAccessibleValueInterface_OnMinimumValue_action _action);
	
	[LinkName("QAccessibleValueInterface_SuperMinimumValue")]
	public static extern void* QAccessibleValueInterface_SuperMinimumValue(void* self);
	[LinkName("QAccessibleValueInterface_MinimumStepSize")]
	public static extern void* QAccessibleValueInterface_MinimumStepSize(void* self);
	
	public function void QAccessibleValueInterface_OnMinimumStepSize_action(void* self);
	[LinkName("QAccessibleValueInterface_OnMinimumStepSize")]
	public static extern void* QAccessibleValueInterface_OnMinimumStepSize(void* self, QAccessibleValueInterface_OnMinimumStepSize_action _action);
	
	[LinkName("QAccessibleValueInterface_SuperMinimumStepSize")]
	public static extern void* QAccessibleValueInterface_SuperMinimumStepSize(void* self);
	[LinkName("QAccessibleValueInterface_OperatorAssign")]
	public static extern void QAccessibleValueInterface_OperatorAssign(void* self, void** param1);
}
// --------------------------------------------------------------
// QAccessibleTableCellInterface
// --------------------------------------------------------------
[CRepr]
struct QAccessibleTableCellInterface_Ptr
{
	public void* Ptr;
	public this(void* ptr)
	{
		this.Ptr = ptr;
	}
	public bool IsSelected()
	{
		return CQt.QAccessibleTableCellInterface_IsSelected((.)this.Ptr);
	}
	public void* ColumnHeaderCells()
	{
		return CQt.QAccessibleTableCellInterface_ColumnHeaderCells((.)this.Ptr);
	}
	public void* RowHeaderCells()
	{
		return CQt.QAccessibleTableCellInterface_RowHeaderCells((.)this.Ptr);
	}
	public c_int ColumnIndex()
	{
		return CQt.QAccessibleTableCellInterface_ColumnIndex((.)this.Ptr);
	}
	public c_int RowIndex()
	{
		return CQt.QAccessibleTableCellInterface_RowIndex((.)this.Ptr);
	}
	public c_int ColumnExtent()
	{
		return CQt.QAccessibleTableCellInterface_ColumnExtent((.)this.Ptr);
	}
	public c_int RowExtent()
	{
		return CQt.QAccessibleTableCellInterface_RowExtent((.)this.Ptr);
	}
	public QAccessibleInterface_Ptr Table()
	{
		return QAccessibleInterface_Ptr(CQt.QAccessibleTableCellInterface_Table((.)this.Ptr));
	}
}
